refactor: journey definition and generated models
