# src/main/java/com/luscadevs/journeyorchestrator/application/dto/CreateJourneyDefinitionRequest.java
@@ -1,18 +1,0 @@
-package com.luscadevs.journeyorchestrator.application.dto;
-
-import lombok.Data;
-import java.util.List;
-
-@Data
-public class CreateJourneyDefinitionRequest {
-
-    private String journeyCode;
-
-    private String version;
-
-    private String initialState;
-
-    private List<StateDTO> states;
-
-    private List<TransitionDTO> transitions;
-}
